P1/A1.output
Nonterminals useless in grammar

    IdentifierListNull
    IdentifierList


Rules useless in grammar

   76 IdentifierListNull: %empty

   77 IdentifierList: IdentifierListNonNull
   78               | IdentifierListNull


State 74 conflicts: 10 shift/reduce
State 200 conflicts: 1 shift/reduce


Grammar

    0 $accept: Goal $end

    1 Goal: MacroDefinitions MainClass TypeDeclarations

    2 MacroDefinitions: %empty
    3                 | MacroDefinitions MacroDefinition

    4 TypeDeclarations: %empty
    5                 | TypeDeclarations TypeDeclaration

    6 MainClass: CLASS Identifier OPEN_CURL_BKT PUBLIC STATIC VOID MAIN OPEN_RND_BKT STRING OPEN_SQR_BKT CLOSE_SQR_BKT Identifier CLOSE_RND_BKT OPEN_CURL_BKT PRINT OPEN_RND_BKT Expression CLOSE_RND_BKT SEMI_COLON CLOSE_CURL_BKT CLOSE_CURL_BKT

    7 MultiVarDeclaration: %empty
    8                    | MultiVarDeclaration Type Identifier SEMI_COLON

    9 MultiMethodDeclaration: %empty
   10                       | MultiMethodDeclaration MethodDeclaration

   11 TypeDeclaration: CLASS Identifier OPEN_CURL_BKT MultiVarDeclaration MultiMethodDeclaration CLOSE_CURL_BKT
   12                | CLASS Identifier EXTENDS Identifier OPEN_CURL_BKT MultiVarDeclaration MultiMethodDeclaration CLOSE_CURL_BKT

   13 MethodArgNull: %empty

   14 MethodArgNonNull: Type Identifier
   15                 | MethodArgNonNull COMMA Type Identifier

   16 MethodArg: MethodArgNull
   17          | MethodArgNonNull

   18 MultiStatement: %empty
   19               | MultiStatement Statement

   20 MethodDeclaration: PUBLIC Type Identifier OPEN_RND_BKT MethodArg CLOSE_RND_BKT OPEN_CURL_BKT MethodBody RETURN Expression SEMI_COLON CLOSE_CURL_BKT

   21 MethodBody: MultiVarDeclaration
   22           | MultiVarDeclaration Statement MultiStatement

   23 Type: INT OPEN_SQR_BKT CLOSE_SQR_BKT
   24     | BOOLEAN
   25     | INT
   26     | Identifier

   27 ExprListNull: %empty

   28 ExprListNonNull: Expression
   29                | ExprListNonNull COMMA Expression

   30 ExprList: ExprListNull
   31         | ExprListNonNull

   32 Statement: OPEN_CURL_BKT MultiStatement CLOSE_CURL_BKT
   33          | PRINT OPEN_RND_BKT Expression CLOSE_RND_BKT SEMI_COLON
   34          | Identifier EQ Expression SEMI_COLON
   35          | Identifier OPEN_SQR_BKT Expression CLOSE_SQR_BKT EQ Expression SEMI_COLON
   36          | IF OPEN_RND_BKT Expression CLOSE_RND_BKT Statement
   37          | IF OPEN_RND_BKT Expression CLOSE_RND_BKT Statement ELSE Statement
   38          | WHILE OPEN_RND_BKT Expression CLOSE_RND_BKT Statement
   39          | Identifier OPEN_RND_BKT ExprList CLOSE_RND_BKT SEMI_COLON

   40 Expression: PrimaryExpression LAND PrimaryExpression
   41           | PrimaryExpression LOR PrimaryExpression
   42           | PrimaryExpression NEQ PrimaryExpression
   43           | PrimaryExpression LTE PrimaryExpression
   44           | PrimaryExpression PLUS PrimaryExpression
   45           | PrimaryExpression MINUS PrimaryExpression
   46           | PrimaryExpression MUL PrimaryExpression
   47           | PrimaryExpression DIV PrimaryExpression
   48           | PrimaryExpression OPEN_SQR_BKT PrimaryExpression CLOSE_SQR_BKT
   49           | PrimaryExpression DOT LENGTH
   50           | PrimaryExpression
   51           | PrimaryExpression DOT Identifier OPEN_RND_BKT ExprList CLOSE_RND_BKT
   52           | Identifier OPEN_RND_BKT ExprList CLOSE_RND_BKT

   53 PrimaryExpression: Integer
   54                  | TRUE
   55                  | FALSE
   56                  | Identifier
   57                  | THIS
   58                  | NEW INT OPEN_SQR_BKT Expression CLOSE_SQR_BKT
   59                  | NEW Identifier OPEN_RND_BKT CLOSE_RND_BKT
   60                  | NOT Expression
   61                  | OPEN_RND_BKT Expression CLOSE_RND_BKT

   62 IdentifierListNonNull: Identifier
   63                      | IdentifierListNonNull COMMA Identifier

   64 MacroDefinition: MacroDefExpression
   65                | MacroDefStatement

   66 MacroDefStatement: DEF_STMT Identifier OPEN_RND_BKT Identifier COMMA Identifier COMMA IdentifierListNonNull CLOSE_RND_BKT OPEN_CURL_BKT MultiStatement CLOSE_CURL_BKT
   67                  | DEF_STMT0 Identifier OPEN_RND_BKT CLOSE_RND_BKT OPEN_CURL_BKT MultiStatement CLOSE_CURL_BKT
   68                  | DEF_STMT1 Identifier OPEN_RND_BKT Identifier CLOSE_RND_BKT OPEN_CURL_BKT MultiStatement CLOSE_CURL_BKT
   69                  | DEF_STMT2 Identifier OPEN_RND_BKT Identifier COMMA Identifier CLOSE_RND_BKT OPEN_CURL_BKT MultiStatement CLOSE_CURL_BKT

   70 MacroDefExpression: DEF_EXPR Identifier OPEN_RND_BKT Identifier COMMA Identifier COMMA IdentifierListNonNull CLOSE_RND_BKT OPEN_RND_BKT Expression CLOSE_RND_BKT
   71                   | DEF_EXPR0 Identifier OPEN_RND_BKT CLOSE_RND_BKT OPEN_RND_BKT Expression CLOSE_RND_BKT
   72                   | DEF_EXPR1 Identifier OPEN_RND_BKT Identifier CLOSE_RND_BKT OPEN_RND_BKT Expression CLOSE_RND_BKT
   73                   | DEF_EXPR2 Identifier OPEN_RND_BKT Identifier COMMA Identifier CLOSE_RND_BKT OPEN_RND_BKT Expression CLOSE_RND_BKT

   74 Identifier: IDENTIFIER

   75 Integer: INTEGER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CLASS <node> (258) 6 11 12
    PUBLIC <node> (259) 6 20
    STATIC <node> (260) 6
    VOID <node> (261) 6
    MAIN <node> (262) 6
    STRING <node> (263) 6
    PRINT <node> (264) 6 33
    EXTENDS <node> (265) 12
    RETURN <node> (266) 20
    INT <node> (267) 23 25 58
    BOOLEAN <node> (268) 24
    IF <node> (269) 36 37
    ELSE <node> (270) 37
    WHILE <node> (271) 38
    DEF_STMT (272) 66
    DEF_STMT0 (273) 67
    DEF_STMT1 (274) 68
    DEF_STMT2 (275) 69
    DEF_EXPR (276) 70
    DEF_EXPR0 (277) 71
    DEF_EXPR1 (278) 72
    DEF_EXPR2 (279) 73
    LENGTH <node> (280) 49
    TRUE <node> (281) 54
    FALSE <node> (282) 55
    THIS <node> (283) 57
    NEW <node> (284) 58 59
    OPEN_CURL_BKT <node> (285) 6 11 12 20 32 66 67 68 69
    CLOSE_CURL_BKT <node> (286) 6 11 12 20 32 66 67 68 69
    OPEN_RND_BKT <node> (287) 6 20 33 36 37 38 39 51 52 59 61 66 67 68 69 70 71 72 73
    CLOSE_RND_BKT <node> (288) 6 20 33 36 37 38 39 51 52 59 61 66 67 68 69 70 71 72 73
    OPEN_SQR_BKT <node> (289) 6 23 35 48 58
    CLOSE_SQR_BKT <node> (290) 6 23 35 48 58
    COMMA <node> (291) 15 29 63 66 69 70 73
    SEMI_COLON <node> (292) 6 8 20 33 34 35 39
    DOT <node> (293) 49 51
    EQ <node> (294) 34 35
    LAND <node> (295) 40
    LOR <node> (296) 41
    NEQ <node> (297) 42
    LTE <node> (298) 43
    PLUS <node> (299) 44
    MINUS <node> (300) 45
    MUL <node> (301) 46
    DIV <node> (302) 47
    NOT <node> (303) 60
    IDENTIFIER <node> (304) 74
    INTEGER <node> (305) 75


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    Goal <ival> (52)
        on left: 1
        on right: 0
    MacroDefinitions <ival> (53)
        on left: 2 3
        on right: 1 3
    TypeDeclarations <node> (54)
        on left: 4 5
        on right: 1 5
    MainClass <node> (55)
        on left: 6
        on right: 1
    MultiVarDeclaration <node> (56)
        on left: 7 8
        on right: 8 11 12 21 22
    MultiMethodDeclaration <node> (57)
        on left: 9 10
        on right: 10 11 12
    TypeDeclaration <node> (58)
        on left: 11 12
        on right: 5
    MethodArgNull <node> (59)
        on left: 13
        on right: 16
    MethodArgNonNull <node> (60)
        on left: 14 15
        on right: 15 17
    MethodArg <node> (61)
        on left: 16 17
        on right: 20
    MultiStatement <node> (62)
        on left: 18 19
        on right: 19 22 32 66 67 68 69
    MethodDeclaration <node> (63)
        on left: 20
        on right: 10
    MethodBody <node> (64)
        on left: 21 22
        on right: 20
    Type <node> (65)
        on left: 23 24 25 26
        on right: 8 14 15 20
    ExprListNull <node> (66)
        on left: 27
        on right: 30
    ExprListNonNull <node> (67)
        on left: 28 29
        on right: 29 31
    ExprList <node> (68)
        on left: 30 31
        on right: 39 51 52
    Statement <node> (69)
        on left: 32 33 34 35 36 37 38 39
        on right: 19 22 36 37 38
    Expression <node> (70)
        on left: 40 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 6 20 28 29 33 34 35 36 37 38 58 60 61 70 71 72 73
    PrimaryExpression <node> (71)
        on left: 53 54 55 56 57 58 59 60 61
        on right: 40 41 42 43 44 45 46 47 48 49 50 51
    IdentifierListNonNull <node> (72)
        on left: 62 63
        on right: 63 66 70
    MacroDefinition <ival> (73)
        on left: 64 65
        on right: 3
    MacroDefStatement <ival> (74)
        on left: 66 67 68 69
        on right: 65
    MacroDefExpression <ival> (75)
        on left: 70 71 72 73
        on right: 64
    Identifier <node> (76)
        on left: 74
        on right: 6 8 11 12 14 15 20 26 34 35 39 51 52 56 59 62 63 66 67 68 69 70 71 72 73
    Integer <node> (77)
        on left: 75
        on right: 53


State 0

    0 $accept: . Goal $end

    $default  reduce using rule 2 (MacroDefinitions)

    Goal              go to state 1
    MacroDefinitions  go to state 2


State 1

    0 $accept: Goal . $end

    $end  shift, and go to state 3


State 2

    1 Goal: MacroDefinitions . MainClass TypeDeclarations
    3 MacroDefinitions: MacroDefinitions . MacroDefinition

    CLASS      shift, and go to state 4
    DEF_STMT   shift, and go to state 5
    DEF_STMT0  shift, and go to state 6
    DEF_STMT1  shift, and go to state 7
    DEF_STMT2  shift, and go to state 8
    DEF_EXPR   shift, and go to state 9
    DEF_EXPR0  shift, and go to state 10
    DEF_EXPR1  shift, and go to state 11
    DEF_EXPR2  shift, and go to state 12

    MainClass           go to state 13
    MacroDefinition     go to state 14
    MacroDefStatement   go to state 15
    MacroDefExpression  go to state 16


State 3

    0 $accept: Goal $end .

    $default  accept


State 4

    6 MainClass: CLASS . Identifier OPEN_CURL_BKT PUBLIC STATIC VOID MAIN OPEN_RND_BKT STRING OPEN_SQR_BKT CLOSE_SQR_BKT Identifier CLOSE_RND_BKT OPEN_CURL_BKT PRINT OPEN_RND_BKT Expression CLOSE_RND_BKT SEMI_COLON CLOSE_CURL_BKT CLOSE_CURL_BKT

    IDENTIFIER  shift, and go to state 17

    Identifier  go to state 18


State 5

   66 MacroDefStatement: DEF_STMT . Identifier OPEN_RND_BKT Identifier COMMA Identifier COMMA IdentifierListNonNull CLOSE_RND_BKT OPEN_CURL_BKT MultiStatement CLOSE_CURL_BKT

    IDENTIFIER  shift, and go to state 17

    Identifier  go to state 19


State 6

   67 MacroDefStatement: DEF_STMT0 . Identifier OPEN_RND_BKT CLOSE_RND_BKT OPEN_CURL_BKT MultiStatement CLOSE_CURL_BKT

    IDENTIFIER  shift, and go to state 17

    Identifier  go to state 20


State 7

   68 MacroDefStatement: DEF_STMT1 . Identifier OPEN_RND_BKT Identifier CLOSE_RND_BKT OPEN_CURL_BKT MultiStatement CLOSE_CURL_BKT

    IDENTIFIER  shift, and go to state 17

    Identifier  go to state 21


State 8

   69 MacroDefStatement: DEF_STMT2 . Identifier OPEN_RND_BKT Identifier COMMA Identifier CLOSE_RND_BKT OPEN_CURL_BKT MultiStatement CLOSE_CURL_BKT

    IDENTIFIER  shift, and go to state 17

    Identifier  go to state 22


State 9

   70 MacroDefExpression: DEF_EXPR . Identifier OPEN_RND_BKT Identifier COMMA Identifier COMMA IdentifierListNonNull CLOSE_RND_BKT OPEN_RND_BKT Expression CLOSE_RND_BKT

    IDENTIFIER  shift, and go to state 17

    Identifier  go to state 23


State 10

   71 MacroDefExpression: DEF_EXPR0 . Identifier OPEN_RND_BKT CLOSE_RND_BKT OPEN_RND_BKT Expression CLOSE_RND_BKT
